# aangs-stocks

./: .gitignore  README.md  installation-values.yaml  manual-web-app-values.yaml  web-app-values.yaml
.github/workflows/: build-and-deploy.yml
helm-app/: Chart.yaml  values.yaml
helm-app-test/templates/: cronjob.yaml  ingress.yaml
helm-app/templates/: cronjob.yaml  postgres-deployment.yaml  postgres-service.yaml  web-app-deployment.yaml  web-app-service.yaml
helm-postgres/: Chart.yaml  values.yaml
helm-postgres/templates/: ingress.yaml
k8s/app/: cronjob.yaml  pgadmin-deployment.yaml  web-app-deployment.yaml  web-app-service.yaml
web-app/: .env  Dockerfile  crud.py  docker-compose.yml  email_job.py  main.py  models.py  pyproject.toml  schemas.py  setup.cfg  test_web_app.py
web-app/alembic/: env.py
web-app/alembic/versions/: 24e17715ed8e_.py  785983b9b50d_.py  98b78d255050_.py  e32032b447cb_.py  e85a73d0976e_.py  f6829f6ef2f0_.py
web-app/k8s/: pgadmin-service.yaml  web-app-deployment.yaml
web-app/k8s/postgres/: postgres-deployment.yaml  postgres-service.yaml
web-app/static/: index.css  index.js  login.js  main.css  register.js
web-app/templates/: index.html  login.html  register.html
web-app/tests/: test_web_app.py
